don't bother tracking changes if both cells are empty (tdf#141174)

AppendContent() does something only if the cells differ, which can't
be the case if they're both empty, so skip unallocated cells.

Change-Id: I367801bac30a8ee641b4ce608392124bac6ef47a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131060
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit 805e73b555df277e7fb35825a0c48d244a2691a9)